pme: Symlink libashmemd_client.so
Fixes the follwing error:
E ashmem  : Failed to dlopen()
libashmemd_client.so: dlopen failed:
 library "libashmemd_client.so" not found

Signed-off-by: Lakshay <lakshaygarg.in@gmail.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -519,6 +519,9 @@ on property:init.svc.media=restarting
 on property:init.svc.servicemanager=restarting
     restart qcamerasvr
 
+on property:apexd.status=ready
+    symlink /system/lib64/libashmemd_client.so /system/apex/com.android.media.swcodec/lib64/libashmemd_client.so
+
 service qseecomd /vendor/bin/qseecomd
     class core
     user root
