--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -459,6 +459,15 @@ service irsc_util /vendor/bin/irsc_util "/vendor/etc/sec_config"
     user root
     oneshot
 
+on property:sys.post_boot.parsed=1
+    start perfd
+
+service vendor.dataqti /vendor/bin/qti
+    class main
+    user radio
+    group radio oem_2901 diag usb net_admin
+    writepid /dev/cpuset/system-background/tasks
+
 service vendor.rmt_storage /vendor/bin/rmt_storage
     class core
     user root
