--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -74,6 +74,10 @@ on boot
     # To prevent permission denied error for telephony
     chmod 0644 /proc/cmdline
 
+    # Create directory for thermal engine
+    mkdir /data/vendor/thermal 0771 root system
+    mkdir /data/vendor/thermal/config 0771 root system
+
     # Wifi firmware reload path
     chown wifi wifi /sys/module/bcmdhd/parameters/firmware_path
 
