--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -34,8 +34,6 @@ on charger
     start vendor.hvdcp_opti
 
 on early-init
-    symlink /data/tombstones /tombstones
-
     mkdir /carrier 0771 radio radio
     mkdir /dev/radio 0770 radio radio
     mkdir /dsp 0771 media media
@@ -352,10 +350,10 @@ on post-fs-data
 
     # Create directory for tombstone
     mkdir /data/tombstones 0771 system system
-    mkdir /tombstones/modem 0771 system system
-    mkdir /tombstones/lpass 0771 system system
-    mkdir /tombstones/dsps 0771 system system
-    mkdir /tombstones/wcnss 0771 system system
+    mkdir /data/tombstones/modem 0771 system system
+    mkdir /data/tombstones/lpass 0771 system system
+    mkdir /data/tombstones/wcnss 0771 system system
+    mkdir /data/tombstones/dsps 0771 system system
 
     mkdir /data/misc/dts 0770 media audio
     mkdir /data/misc/seemp 0700 system system
