--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -37,7 +37,7 @@ LPPE_SRN_DATA_SCAN_INJECT_TIME=2
 # without EULA consent, but the uncertainty can be high.
 # QNP preferred mode prefers QNP when there is EULA consent,
 # otherwise OSNLP is used.
-NLP_MODE = 2
+NLP_MODE = 4
 NLP_MODE_EMERGENCY = 2
 NLP_TOLERANCE_TIME_FIRST = 5000
 NLP_TOLERANCE_TIME_AFTER = 20000
@@ -105,7 +105,7 @@ GTP_WAA=DISABLED
 # BASIC
 # PREMIUM
 # MODEM_DEFAULT
-SAP=BASIC
+SAP=MODEM_DEFAULT
 
 #FREE_WIFI_SCAN_INJECT valid modes:
 #DISABLED
@@ -169,7 +169,7 @@ VENDOR_ENHANCED_PROCESS=0
 
 PROCESS_NAME=xtwifi-inet-agent
 PROCESS_ARGUMENT=
-PROCESS_STATE=DISABLED
+PROCESS_STATE=ENABLED
 PROCESS_GROUPS=inet gps
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xc03
@@ -180,7 +180,7 @@ VENDOR_ENHANCED_PROCESS=1
 
 PROCESS_NAME=xtwifi-client
 PROCESS_ARGUMENT=
-PROCESS_STATE=DISABLED
+PROCESS_STATE=ENABLED
 PROCESS_GROUPS=wifi inet gps system oem_2904
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xd03
